tdf#161372 Spreadsheets with comments are unreasonably slow

no need to instantiate invisible comments in this case,
reduces column deelete time down to a couple of seconds

Change-Id: I79cca144918d2ac36d902e2cda3ed8f962c2198a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185784
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>